--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -28,6 +28,8 @@ $aside_bc: #F3EDFB !default;
 $aside_bgc:  #FFFDFD !default;
 $aside_tc: $a !default;
 
+$table_c :  $a;
+
 $field2_brc: $aside_bc !default;
 $field2_lc: $a !default;
 $calendar_c1: #E3C7FF !default;
