--- a/src/scss/create_publications/_util.scss
+++ b/src/scss/create_publications/_util.scss
@@ -30,12 +30,11 @@
 
 %textarea {
   border: 1px solid #f3edfb;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
   background-color: #fffdfd;
   resize: none;
   color: #a1a1a1;
   font-size: 14px;
+  padding: 1rem;
   &:-moz-placeholder { color: #a1a1a1; }
   &::-webkit-input-placeholder { color: #a1a1a1; }
 }
