--- a/src/scss/create_publications/create_publications.scss
+++ b/src/scss/create_publications/create_publications.scss
@@ -25,7 +25,7 @@
   }
   .ddcommon .ddTitle .description, .dd .ddChild li .description {
     color: #999999;
-    font-size: 16px;
+    font-size: 1rem;
     display: inline-flex;
     white-space: nowrap;
     overflow: hidden;
@@ -40,10 +40,10 @@
   }
   .ddcommon .ddTitle .ddTitleText .ddlabel, .dd .ddChild li .ddlabel {
     display: inline-flex;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     color: #2c2d2e;
-    margin-right: 20px;
+    margin-right: 1.25rem;
     @media (max-width: 578px) {
       display: block;
     }
@@ -71,11 +71,11 @@
 
   .qq-gallery .qq-upload-button {
     position: absolute !important;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
     font-size: 0;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     cursor: pointer;
     opacity: 0;
     height: 100%;
@@ -84,7 +84,7 @@
     content: "Drop files here";
   }
   .qq-gallery .qq-upload-list li {
-    margin: 0 25px 25px 1px;
+    margin: 0 1.5625rem 1.5625rem 0.0625rem;
   }
 
   .qq-gallery.qq-uploader {
@@ -103,6 +103,8 @@
   }
   textarea{
     @extend %textarea;
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
   }
   .post_description-decorator{
     position: relative;
@@ -111,9 +113,9 @@
       height: 30px;
       bottom: -5px;
       border: 1px solid #f3edfb;
+      background-color: #fffdfd;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
-      background-color: #fffdfd;
       width: 100%;
       position: absolute;
     }
