--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -35,6 +35,9 @@ $field2_lc: $a !default;
 $calendar_c1: #E3C7FF !default;
 // Color system
 
+$gray-80: #808080 !default;
+$col_68:   #838080 !default;
+$col_83:   #686666 !default;
 $col_99:   #999999 !default;
 $white:    #fff    !default;
 $gray-100: #f8f9fa !default;
