--- a/css/app.css
+++ b/css/app.css
@@ -9931,6 +9931,26 @@ h3 {
   box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 
+.btn-inline-default {
+  color: #fff;
+  background-color: #999999;
+  font-size: 1rem;
+  border-radius: 1.25rem;
+  padding: 0.375rem 2.78rem;
+  border: 2px solid #999999;
+  font-family: Rubik, sans-serif;
+}
+.btn-inline-default:hover {
+  color: #fff;
+  border-color: #838080;
+  background-color: #838080;
+}
+.btn-inline-default:focus {
+  color: #fff;
+  border-color: #686666;
+  background-color: #686666;
+}
+
 .btn-inline-custom, .btn-inline-custom5, .btn-inline-custom4, .btn-inline-custom3, .btn-inline-custom2 {
   color: #fff;
   background-color: #FF3C88;
@@ -9938,7 +9958,7 @@ h3 {
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
   border: 2px solid #FF3C88;
-  font-family: "RubikRegular", sans-serif;
+  font-family: Rubik, sans-serif;
 }
 .btn-inline-custom:hover, .btn-inline-custom5:hover, .btn-inline-custom4:hover, .btn-inline-custom3:hover, .btn-inline-custom2:hover {
   color: #fff;
@@ -9973,7 +9993,7 @@ h3 {
   padding: 0.55rem 1.45rem;
   font-size: 0.875rem;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 .btn-inline-custom3:hover {
   color: #fff;
@@ -9998,7 +10018,7 @@ h3 {
   padding: 0.63rem 5.7rem;
   font-size: 0.875rem;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 .btn-inline-custom4:hover {
   color: #fff;
@@ -10023,7 +10043,7 @@ h3 {
   padding: 0.63rem 5.7rem;
   font-size: 0.875rem;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 .btn-inline-custom5:hover {
   color: #fff;
@@ -10043,7 +10063,7 @@ h3 {
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
   border: 2px solid #FF3C88;
-  font-family: "RubikRegular", sans-serif;
+  font-family: Rubik, sans-serif;
 }
 .btn-outline-custom:hover, .btn-outline-custom2:hover {
   color: #fff;
@@ -10120,7 +10140,7 @@ h3 {
 
 /* Switch 1 Specific Styles Start */
 input[type=checkbox].switch {
-  font-size: 24px;
+  font-size: 1.5rem !important;
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 2em;
@@ -10985,9 +11005,9 @@ button:focus {
     margin-bottom: 2rem;
   }
 }
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   .l_site-main .l_add-desc-title {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
   }
 }
 .l_site-main .spintax_label, .l_site-main .default-template_label {
@@ -11053,9 +11073,9 @@ button:focus {
     margin-bottom: 1rem;
   }
 }
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   .l_site-main .l_add-account-title {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
   }
 }
 .l_site-main .l_add-account-sub_title {
@@ -11102,10 +11122,288 @@ button:focus {
     text-align: center;
   }
 }
+.edit_account .l_site-main .l_site-content-title {
+  margin-bottom: 2.1875rem;
+}
+.edit_account .l_site-main .l_site-content-title .nav-link {
+  position: relative;
+  display: inline-flex;
+  font-size: 1.5rem;
+  color: #999999;
+  line-height: 2.642;
+  font-weight: 500;
+}
+@media (max-width: 576px) {
+  .edit_account .l_site-main .l_site-content-title .nav-link {
+    line-height: inherit;
+    text-align: center;
+  }
+}
+.edit_account .l_site-main .l_site-content-title .nav-link.active {
+  color: #2c2d2e;
+}
+.edit_account .l_site-main .l_site-content-title .nav-link.active::after {
+  content: "";
+  position: absolute;
+  left: 1rem;
+  bottom: 0;
+  height: 6px;
+  width: 75%;
+  border-bottom: 6px solid #FF398B;
+}
+@media (max-width: 576px) {
+  .edit_account .l_site-main .l_site-content-title .nav-link.active::after {
+    left: 0;
+    width: 100%;
+  }
+}
+.l_site-main .l_site-edit_account input, .l_site-main .l_site-edit_account textarea, .l_site-main .l_site-edit_account label {
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  font-size: 1.125rem;
+  color: #2c2d2e;
+}
+@media (max-width: 576px) {
+  .l_site-main .l_site-edit_account input, .l_site-main .l_site-edit_account label {
+    text-align: center;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_site-edit_account button[type=submit] {
+    width: 100%;
+  }
+}
+.new_tariff .l_site-main .l_tariff {
+  padding-top: 1rem;
+  background-color: #fff;
+  margin-bottom: 9.375rem;
+}
+.l_site-main .l_new_tariff-title {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 1.5625rem;
+  font-family: Rubik, sans-serif;
+}
+@media (max-width: 1600px) {
+  .l_site-main .l_new_tariff-title {
+    font-size: 2.8rem;
+  }
+}
+@media (max-width: 800px) {
+  .l_site-main .l_new_tariff-title {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_new_tariff-title {
+    font-size: 2.2rem;
+  }
+}
+.l_site-main .l_tariff {
+  background-color: #F8FBFC;
+  padding-top: 3.4375rem;
+  z-index: 20;
+  position: relative;
+}
+.l_site-main .l_tariff .l_tariff--content {
+  background-color: #FFF;
+  margin-top: 1.25rem;
+}
+@media (max-width: 991px) {
+  .l_site-main .l_tariff .l_tariff--content {
+    background-color: unset;
+  }
+}
+@media (min-width: 992px) {
+  .l_site-main .l_tariff .l_tariff--content .l_card--free {
+    border-radius: 8px 0 0 8px !important;
+  }
+}
+.l_site-main .l_tariff .l_tariff--content .l_card--premium {
+  background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+  background-size: 43%;
+  background-position: 126% -6%;
+}
+@media (min-width: 992px) {
+  .l_site-main .l_tariff .l_tariff--content .l_card--premium {
+    border-radius: 0 8px 8px 0 !important;
+  }
+}
+.l_site-main .l_tariff .l_tariff--content .card {
+  border: none;
+  box-shadow: 0 13px 51px 0 rgba(68, 72, 230, 0.06);
+  border-right: 1px solid #F6EDFC;
+  border-radius: unset;
+}
+@media (max-width: 991px) {
+  .l_site-main .l_tariff .l_tariff--content .card {
+    margin-top: 0.3125rem;
+  }
+}
+.l_site-main .l_tariff .l_tariff--content .card.current .card-body .card-title {
+  padding-bottom: 1rem;
+}
+.l_site-main .l_tariff .l_tariff--content .card.current .l_tar-footer .btn {
+  color: #fff;
+  background-color: #5f26ff;
+  border: 2px solid #5f26ff;
+}
+.l_site-main .l_tariff .l_tariff--content .card.current .l_tar-footer .btn:hover {
+  color: #fff;
+  border-color: #511ce3;
+  background-color: #511ce3;
+}
+.l_site-main .l_tariff .l_tariff--content .card.current .l_tar-footer .btn:focus {
+  color: #fff;
+  border-color: #441aba;
+  background-color: #441aba;
+}
+.l_site-main .l_tariff .l_tariff--content .card.disabled .card-body .l_tar-price {
+  color: #808080;
+}
+.l_site-main .l_tariff .l_tariff--content .card.disabled .l_tar-footer .btn {
+  color: #808080;
+  background-color: #fff;
+  border: 2px solid #808080;
+}
+.l_site-main .l_tariff .l_tariff--content .card.disabled .l_tar-footer .btn:hover {
+  color: #808080;
+  border-color: #808080;
+  background-color: #fff;
+}
+.l_site-main .l_tariff .l_tariff--content .card.disabled .l_tar-footer .btn:focus {
+  color: #808080;
+  border-color: #808080;
+  background-color: #fff;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .card-title {
+  color: #BD90E4;
+  margin-top: 1.5625rem;
+  text-align: center;
+  border-bottom: 1px solid #F6EDFC;
+  padding-bottom: 2.0625rem;
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .card-title span {
+  display: block;
+  font-size: 14px;
+  color: #0e1a3f;
+  font-weight: 300;
+  text-transform: initial;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .l_tar-title--free {
+  color: #7e7e7e;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .card-list {
+  list-style: none;
+  padding-left: 0.9375rem;
+  font-size: 0.8125rem;
+  line-height: 1.5rem;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .card-list li::before {
+  content: "";
+  border-radius: 50%;
+  background-color: #BD90E4;
+  position: absolute;
+  left: 17px;
+  width: 10px;
+  margin-top: 0.3125rem;
+  height: 11px;
+  z-index: 125;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .card-list li.inactive {
+  text-decoration: line-through;
+  color: #7f7f7f;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .l_tar-list--free li::before {
+  background-color: #7e7e7e;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .l_tar-price {
+  margin-top: 1.875rem;
+  text-align: center;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 2.9rem;
+}
+.l_site-main .l_tariff .l_tariff--content .card .card-body .l_tar-price .l_tar-price--period {
+  font-size: 0.875rem;
+  color: #adadad;
+}
+.l_site-main .l_tariff .l_tariff--content .card .l_tar-footer {
+  margin-top: 1.25rem;
+}
+.l_site-main .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom, .l_site-main .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2 {
+  color: #1a2547;
+  border-color: #1a2547;
+}
+.l_site-main .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom:hover, .l_site-main .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2:hover {
+  color: #FFF;
+  background-color: #1a2547;
+  border-color: #1a2547;
+}
+.l_site-main .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom:focus, .l_site-main .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2:focus {
+  color: #FFF;
+  background-color: #1a2547;
+  border-color: #1a2547;
+}
+.l_site-main .l_tariff .l_tariff--footer {
+  position: relative;
+  margin-top: 9.0625rem;
+  background-color: #612ADE;
+  color: #FFF;
+  padding-top: 2.5rem;
+  padding-bottom: 2.8125rem;
+}
+@media (max-width: 576px) {
+  .l_site-main .l_tariff .l_tariff--footer {
+    width: calc(100% + 30px);
+    left: -15px;
+  }
+}
+@media (max-width: 1200px) {
+  .l_site-main .l_tariff .l_tariff--footer {
+    margin-top: 3.75rem;
+  }
+}
+.l_site-main .l_tariff .l_tariff--footer .l_tariff-footer--content {
+  position: relative;
+  z-index: 23;
+}
+.l_site-main .l_tariff .l_tariff--footer .l_tariff-footer--content .l_tariff--msg {
+  font-size: 1.45rem;
+  word-spacing: 6px;
+  margin: 0.25rem 0;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+}
+.l_site-main .l_tariff .l_tariff--footer .l_tariff-footer--content .l_tariff-callback--msg {
+  font-size: 1.43rem;
+  word-spacing: 6px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  margin-bottom: 1.875rem;
+}
+.l_site-main .l_tariff .l_tariff--footer::after {
+  content: "";
+  background: url(../images/tariff_illustration.svg) no-repeat 70% bottom;
+  width: 232px;
+  height: 510px;
+  position: absolute;
+  right: 9%;
+  bottom: -100px;
+}
+@media (max-width: 1200px) {
+  .l_site-main .l_tariff .l_tariff--footer::after {
+    content: none;
+  }
+}
 .l_site-main .l_desc-templates-title {
   margin-bottom: 3.125rem;
 }
-@media (max-width: 568px) {
+@media (max-width: 576px) {
   .l_site-main .l_desc-templates-title {
     margin-top: 1rem;
   }
@@ -11143,6 +11441,168 @@ button:focus {
 @media (max-width: 991px) {
   .l_site-main {
     margin-top: 3.5rem;
+  }
+}
+.l_site-main .first_screen-container {
+  margin-top: 9.375rem;
+  margin-bottom: 3rem;
+}
+@media (max-width: 1280px) {
+  .l_site-main .first_screen-container {
+    margin-top: 7.375rem;
+  }
+}
+@media (max-width: 992px) {
+  .l_site-main .first_screen-container {
+    margin-top: 5rem;
+  }
+}
+@media (max-width: 768px) {
+  .l_site-main .first_screen-container {
+    margin-top: 7rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .first_screen-container {
+    margin-top: 1.375rem;
+  }
+}
+@media (min-width: 2200px) {
+  .l_site-main .first_screen-container {
+    margin-top: 13.5rem;
+  }
+}
+.l_site-main .first_screen-container .first_screen-title {
+  font-size: 3rem;
+  font-family: Rubik, sans-serif;
+  color: #1F2022;
+  text-align: center;
+  margin-bottom: 0.8rem;
+}
+@media (max-width: 1500px) {
+  .l_site-main .first_screen-container .first_screen-title {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .first_screen-container .first_screen-title {
+    font-size: 2rem;
+  }
+}
+.l_site-main .first_screen-container .first_screen_sub-title {
+  font-size: 1.875rem;
+  font-family: Rubik, sans-serif;
+  color: #1F2022;
+  text-align: center;
+  font-weight: 400;
+  margin-bottom: 3.125rem;
+}
+@media (max-width: 1500px) {
+  .l_site-main .first_screen-container .first_screen_sub-title {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .first_screen-container .first_screen_sub-title {
+    font-size: 1.2rem;
+  }
+}
+.l_site-main .first_screen-container .btn {
+  padding: 1.2rem 5.78rem;
+  font-size: 1.3rem !important;
+  border-radius: 0.65rem !important;
+}
+@media (max-width: 1500px) {
+  .l_site-main .first_screen-container .btn {
+    padding: 1rem 4rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .first_screen-container .btn {
+    padding: 0.71rem 3rem;
+  }
+}
+.l_site-main .subs_end-container {
+  margin-top: 9.375rem;
+  margin-bottom: 3rem;
+}
+@media (max-width: 1280px) {
+  .l_site-main .subs_end-container {
+    margin-top: 7.375rem;
+  }
+}
+@media (max-width: 992px) {
+  .l_site-main .subs_end-container {
+    margin-top: 5rem;
+  }
+}
+@media (max-width: 768px) {
+  .l_site-main .subs_end-container {
+    margin-top: 7rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .subs_end-container {
+    margin-top: 1.375rem;
+  }
+}
+@media (min-width: 2200px) {
+  .l_site-main .subs_end-container {
+    margin-top: 13.5rem;
+  }
+}
+.l_site-main .subs_end-container .subs_end-title {
+  font-size: 3rem;
+  font-family: Rubik, sans-serif;
+  color: #1F2022;
+  text-align: center;
+  margin-bottom: 0.8rem;
+}
+@media (max-width: 1500px) {
+  .l_site-main .subs_end-container .subs_end-title {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .subs_end-container .subs_end-title {
+    font-size: 2rem;
+  }
+}
+.l_site-main .subs_end-container .subs_end_sub-title {
+  font-size: 1.875rem;
+  font-family: Rubik, sans-serif;
+  color: #1F2022;
+  font-weight: 400;
+  text-align: center;
+  margin-bottom: 3.125rem;
+}
+@media (max-width: 1500px) {
+  .l_site-main .subs_end-container .subs_end_sub-title {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .subs_end-container .subs_end_sub-title {
+    font-size: 1.2rem;
+  }
+}
+.l_site-main .subs_end-container .btn {
+  padding: 1.2rem 9rem;
+  font-size: 1.3rem !important;
+  border-radius: 0.65rem !important;
+}
+@media (max-width: 1500px) {
+  .l_site-main .subs_end-container .btn {
+    padding: 0.71rem 7rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .subs_end-container .btn {
+    padding: 0.71rem 1rem;
+    margin: 0 auto 1rem !important;
+    width: 70%;
   }
 }
 .registration .l_site-main {
@@ -11514,16 +11974,25 @@ button:focus {
 .l_site-main .l_icon--edit {
   background: url(../images/sprite_btn.png) no-repeat -35px 0;
 }
-.l_site-main .l_reg-title {
+.l_site-main .l_reg-title, .l_site-main .l_login-title {
   font-size: 3rem;
   font-weight: 500;
   margin-bottom: 1.5rem;
   font-family: Rubik, sans-serif;
 }
 @media (max-width: 1600px) {
-  .l_site-main .l_reg-title {
+  .l_site-main .l_reg-title, .l_site-main .l_login-title {
     font-size: 2.8rem;
   }
+}
+.l_site-main .l_login-pass_rec {
+  text-decoration: underline;
+  color: #777777;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.l_site-main .l_login-pass_rec:hover, .l_site-main .l_login-pass_rec:focus {
+  color: #686666;
 }
 .l_site-main .l_registration .l_reg-container {
   width: 630px;
@@ -11764,4 +12233,58 @@ button:focus {
   color: #FFF;
   font-weight: 500;
   background-color: #6C42CE;
+}
+
+#sub_popup.modal {
+  margin-top: 35vh;
+}
+#sub_popup.modal .modal-content {
+  background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+  background-position: 123% 93%;
+}
+@media (max-width: 991px) {
+  #sub_popup.modal .modal-content {
+    background-position: 153% 143%;
+  }
+}
+@media (max-width: 576px) {
+  #sub_popup.modal .modal-content {
+    background: #FFF;
+  }
+}
+#sub_popup.modal .modal-header {
+  padding: 1rem 1rem 0;
+  border: none;
+  text-transform: uppercase;
+}
+#sub_popup.modal .modal-header .modal-title {
+  padding-left: 1rem;
+}
+#sub_popup.modal .modal-header h5 {
+  font-weight: 700;
+}
+#sub_popup.modal .modal-header .close {
+  opacity: 1;
+  font-size: 2rem;
+  color: white;
+}
+@media (max-width: 576px) {
+  #sub_popup.modal .modal-header .close {
+    color: #777;
+  }
+}
+#sub_popup.modal .modal-body {
+  padding: 1rem 6rem 1rem 2rem;
+  color: #C7C3C3;
+}
+@media (max-width: 991px) {
+  #sub_popup.modal .modal-body {
+    padding: 1rem 3rem 1rem 2rem;
+  }
+}
+@media (max-width: 576px) {
+  #sub_popup.modal .modal-body {
+    padding: 1rem;
+    text-align: justify;
+  }
 }
