--- a/css/spa-app.css
+++ b/css/spa-app.css
@@ -9749,6 +9749,26 @@ h3 {
   box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 
+.btn-inline-default {
+  color: #fff;
+  background-color: #999999;
+  font-size: 1rem;
+  border-radius: 1.25rem;
+  padding: 0.375rem 2.78rem;
+  border: 2px solid #999999;
+  font-family: Rubik, sans-serif;
+}
+.btn-inline-default:hover {
+  color: #fff;
+  border-color: #838080;
+  background-color: #838080;
+}
+.btn-inline-default:focus {
+  color: #fff;
+  border-color: #686666;
+  background-color: #686666;
+}
+
 .btn-inline-custom, .btn-inline-custom5, .btn-inline-custom4, .btn-inline-custom3, .btn-inline-custom2 {
   color: #fff;
   background-color: #FF3C88;
@@ -9756,7 +9776,7 @@ h3 {
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
   border: 2px solid #FF3C88;
-  font-family: "RubikRegular", sans-serif;
+  font-family: Rubik, sans-serif;
 }
 .btn-inline-custom:hover, .btn-inline-custom5:hover, .btn-inline-custom4:hover, .btn-inline-custom3:hover, .btn-inline-custom2:hover {
   color: #fff;
@@ -9791,7 +9811,7 @@ h3 {
   padding: 0.55rem 1.45rem;
   font-size: 0.875rem;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 .btn-inline-custom3:hover {
   color: #fff;
@@ -9816,7 +9836,7 @@ h3 {
   padding: 0.63rem 5.7rem;
   font-size: 0.875rem;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 .btn-inline-custom4:hover {
   color: #fff;
@@ -9841,7 +9861,7 @@ h3 {
   padding: 0.63rem 5.7rem;
   font-size: 0.875rem;
   font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 .btn-inline-custom5:hover {
   color: #fff;
@@ -9861,7 +9881,7 @@ h3 {
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
   border: 2px solid #FF3C88;
-  font-family: "RubikRegular", sans-serif;
+  font-family: Rubik, sans-serif;
 }
 .btn-outline-custom:hover, .btn-outline-custom2:hover {
   color: #fff;
@@ -9938,7 +9958,7 @@ h3 {
 
 /* Switch 1 Specific Styles Start */
 input[type=checkbox].switch {
-  font-size: 24px;
+  font-size: 1.5rem !important;
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 2em;
@@ -10780,6 +10800,42 @@ button:focus {
     margin-top: 0.3125rem;
   }
 }
+.l_tariff .l_tariff--content .card.current .card-body .card-title {
+  padding-bottom: 1rem;
+}
+.l_tariff .l_tariff--content .card.current .l_tar-footer .btn {
+  color: #fff;
+  background-color: #5f26ff;
+  border: 2px solid #5f26ff;
+}
+.l_tariff .l_tariff--content .card.current .l_tar-footer .btn:hover {
+  color: #fff;
+  border-color: #511ce3;
+  background-color: #511ce3;
+}
+.l_tariff .l_tariff--content .card.current .l_tar-footer .btn:focus {
+  color: #fff;
+  border-color: #441aba;
+  background-color: #441aba;
+}
+.l_tariff .l_tariff--content .card.disabled .card-body .l_tar-price {
+  color: #808080;
+}
+.l_tariff .l_tariff--content .card.disabled .l_tar-footer .btn {
+  color: #808080;
+  background-color: #fff;
+  border: 2px solid #808080;
+}
+.l_tariff .l_tariff--content .card.disabled .l_tar-footer .btn:hover {
+  color: #808080;
+  border-color: #808080;
+  background-color: #fff;
+}
+.l_tariff .l_tariff--content .card.disabled .l_tar-footer .btn:focus {
+  color: #808080;
+  border-color: #808080;
+  background-color: #fff;
+}
 .l_tariff .l_tariff--content .card .card-body .card-title {
   color: #BD90E4;
   margin-top: 1.5625rem;
@@ -10789,6 +10845,13 @@ button:focus {
   font-weight: bold;
   font-size: 1.5rem;
   text-transform: uppercase;
+}
+.l_tariff .l_tariff--content .card .card-body .card-title span {
+  display: block;
+  font-size: 14px;
+  color: #0e1a3f;
+  font-weight: 300;
+  text-transform: initial;
 }
 .l_tariff .l_tariff--content .card .card-body .l_tar-title--free {
   color: #7e7e7e;
@@ -10820,7 +10883,7 @@ button:focus {
 .l_tariff .l_tariff--content .card .card-body .l_tar-price {
   margin-top: 1.875rem;
   text-align: center;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 2.9rem;
 }
@@ -10836,6 +10899,11 @@ button:focus {
   border-color: #1a2547;
 }
 .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom:hover, .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2:hover {
+  color: #FFF;
+  background-color: #1a2547;
+  border-color: #1a2547;
+}
+.l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom:focus, .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2:focus {
   color: #FFF;
   background-color: #1a2547;
   border-color: #1a2547;
@@ -10867,13 +10935,13 @@ button:focus {
   font-size: 1.45rem;
   word-spacing: 6px;
   margin: 0.25rem 0;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
 }
 .l_tariff .l_tariff--footer .l_tariff-footer--content .l_tariff-callback--msg {
   font-size: 1.43rem;
   word-spacing: 6px;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
   margin-bottom: 1.875rem;
 }
