--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -164,6 +164,7 @@ button:focus {
       background-color: white;
       padding: 0.5rem 1rem !important;
     }
+
     .dashboard & .navbar-brand {
       @media (min-width: 1200px) {
         margin-left: 5rem;
@@ -192,6 +193,9 @@ button:focus {
   @import "create_publications/create_publications";
   @import "add_description/add_description";
   @import "add_account/add_account";
+  @import "edit_account/edit_account";
+  @import "new_tariff/new_tariff";
+  @import "spa-sections/tariff";
   @import "description_templates/description_templates";
   @media (max-width: 991px) {
     margin-top: 3.5rem;
@@ -199,6 +203,131 @@ button:focus {
   @media (min-width: 1200px) {
     //margin-bottom: 210px;
   }
+
+  .first_screen-container {
+    margin-top: 9.375rem;
+    margin-bottom: 3rem;
+    @media (max-width: 1280px) {
+      margin-top: 7.375rem;
+    }
+    @media (max-width: 992px) {
+      margin-top: 5rem;
+    }
+    @media (max-width: 768px) {
+      margin-top: 7rem;
+    }
+    @media (max-width: 576px) {
+      margin-top: 1.375rem;
+    }
+    @media (min-width: 2200px) {
+      margin-top: 13.5rem;
+    }
+    .first_screen-title {
+      font-size: 3rem;
+      font-family: Rubik, sans-serif;
+      color: #1F2022;
+      text-align: center;
+      margin-bottom: 0.8rem;
+      @media (max-width: 1500px) {
+        font-size: 2.5rem;
+      }
+      @media (max-width: 576px) {
+        font-size: 2rem;
+      }
+    }
+
+    .first_screen_sub-title {
+      font-size: 1.875rem;
+      font-family: Rubik, sans-serif;
+      color: #1F2022;
+      text-align: center;
+      font-weight: 400;
+      margin-bottom: 3.125rem;
+      @media (max-width: 1500px) {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+      }
+      @media (max-width: 576px) {
+        font-size: 1.2rem;
+      }
+    }
+
+    .btn {
+      padding: 1.2rem 5.78rem;
+      font-size: 1.3rem !important;
+      border-radius: 0.65rem !important;
+      @media (max-width: 1500px) {
+        padding: 1rem 4rem;
+      }
+      @media (max-width: 576px) {
+        padding: 0.71rem 3rem;
+      }
+    }
+  }
+
+  .subs_end-container {
+    margin-top: 9.375rem;
+    margin-bottom: 3rem;
+    @media (max-width: 1280px) {
+      margin-top: 7.375rem;
+    }
+    @media (max-width: 992px) {
+      margin-top: 5rem;
+    }
+    @media (max-width: 768px) {
+      margin-top: 7rem;
+    }
+    @media (max-width: 576px) {
+      margin-top: 1.375rem;
+    }
+    @media (min-width: 2200px) {
+      margin-top: 13.5rem;
+    }
+    .subs_end-title {
+      font-size: 3rem;
+      font-family: Rubik, sans-serif;
+      color: #1F2022;
+      text-align: center;
+      margin-bottom: 0.8rem;
+      @media (max-width: 1500px) {
+        font-size: 2.5rem;
+      }
+      @media (max-width: 576px) {
+        font-size: 2rem;
+      }
+    }
+
+    .subs_end_sub-title {
+      font-size: 1.875rem;
+      font-family: Rubik, sans-serif;
+      color: #1F2022;
+      font-weight: 400;
+      text-align: center;
+      margin-bottom: 3.125rem;
+      @media (max-width: 1500px) {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+      }
+      @media (max-width: 576px) {
+        font-size: 1.2rem;
+      }
+    }
+
+    .btn {
+      padding: 1.2rem 9rem;
+      font-size: 1.3rem !important;
+      border-radius: 0.65rem !important;
+      @media (max-width: 1500px) {
+        padding: 0.71rem 7rem;
+      }
+      @media (max-width: 576px) {
+        padding: 0.71rem 1rem;
+        margin: 0 auto 1rem !important;
+        width: 70%;
+      }
+    }
+  }
+
   .registration & {
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
@@ -216,6 +345,7 @@ button:focus {
       padding-top: 20vh;
     }
   }
+
   .add_description & {
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
@@ -548,15 +678,16 @@ button:focus {
 
     .profile & {
       @media (max-width: 1199px) {
-      max-width: 500px;
-      margin: 0 auto;
+        max-width: 500px;
+        margin: 0 auto;
       }
     }
 
-    .l_site-content-title{
+    .l_site-content-title {
       @media (max-width: 1024px) {
         text-align: center;
       }
+
       h3 {
         display: inline-flex;
         padding: 0.625rem 0;
@@ -598,13 +729,22 @@ button:focus {
     background: url(../images/sprite_btn.png) no-repeat -35px 0;
   }
 
-  .l_reg-title {
+  .l_reg-title, .l_login-title {
     font-size: 3rem;
     font-weight: 500;
     margin-bottom: 1.5rem;
     font-family: Rubik, sans-serif;
     @media (max-width: 1600px) {
       font-size: 2.8rem;
+    }
+  }
+  .l_login-pass_rec{
+    text-decoration: underline;
+    color: $gray-777;
+    display: block;
+    margin-bottom: 0.5rem;
+    &:hover, &:focus{
+      color: $col_83;
     }
   }
 
@@ -617,15 +757,18 @@ button:focus {
       @media (max-width: 1600px) {
         padding: 1.5625rem 1.5625rem;
       }
+
       .l_reg-user-accept {
         color: #777777;
 
         a {
           text-decoration: underline;
-          &:hover{
+
+          &:hover {
             color: $a_hover;
             text-decoration: none;
           }
+
           &:focus {
             color: $a_focus;
             text-decoration: none;
@@ -635,13 +778,16 @@ button:focus {
 
       .l_reg-user-quest {
         color: #777777;
+
         a {
           color: $a_inline3;
           text-decoration: underline;
-          &:hover{
+
+          &:hover {
             color: $a_hover3;
             text-decoration: none;
           }
+
           &:focus {
             color: $a_focus3;
             text-decoration: none;
@@ -756,11 +902,13 @@ button:focus {
   line-height: 2rem;
   background-color: rgb(255, 253, 253);
   box-shadow: 0 0 5.95px 1.05px rgba(69, 65, 78, 0.08);
-  .registration &::before{
+
+  .registration &::before {
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
     background-position: right;
   }
+
   @media (min-width: 1200px) {
     // position: absolute;
     // bottom: 0;
@@ -894,6 +1042,50 @@ button:focus {
           }
         }
       }
+    }
+  }
+}
+
+#sub_popup.modal {
+  margin-top: 35vh;
+  .modal-content{
+    background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+    background-position: 123% 93%;
+    @media (max-width: 991px) {
+      background-position: 153% 143%;
+    }
+    @media (max-width: 576px) {
+      background: #FFF;
+    }
+  }
+  .modal-header {
+    padding: 1rem 1rem 0;
+    border: none;
+    text-transform: uppercase;
+    .modal-title{
+      padding-left: 1rem;
+    }
+    h5{
+      font-weight: 700;
+    }
+    .close{
+      opacity: 1;
+      font-size: 2rem;
+      color: white;
+      @media (max-width: 576px) {
+        color: #777;
+      }
+    }
+  }
+  .modal-body{
+    padding: 1rem 6rem 1rem 2rem;
+    color: #C7C3C3;
+    @media (max-width: 991px) {
+      padding: 1rem 3rem 1rem 2rem;
+    }
+    @media (max-width: 576px) {
+      padding: 1rem;
+      text-align: justify;
     }
   }
 }
