--- a/src/scss/create_publications/create_publications.scss
+++ b/src/scss/create_publications/create_publications.scss
@@ -23,7 +23,7 @@
       text-align: center;
     }
   }
-  .ddcommon .ddTitle .description, .dd .ddChild li .description {
+  .ddcommon .ddTitle .description, .dd .ddChild li .description,.ddcommon .ddTitle .ddlabel, .dd .ddChild li .ddlabel {
     color: #999999;
     font-size: 1rem;
     display: inline-flex;
@@ -32,9 +32,12 @@
     text-overflow: ellipsis;
     max-width: 300px;
     cursor: pointer;
+    @media (max-width: 576px) {
+      display: block;
+    }
   }
   .ddcommon .ddTitle .description {
-    @media (max-width: 578px) {
+    @media (max-width: 576px) {
       max-width: 200px;
     }
   }
@@ -44,7 +47,7 @@
     font-weight: 500;
     color: #2c2d2e;
     margin-right: 1.25rem;
-    @media (max-width: 578px) {
+    @media (max-width: 576px) {
       display: block;
     }
   }
@@ -52,7 +55,7 @@
     margin-left: 1.875rem;
   }
   .dd .ddChild li .description, .ddcommon .ddTitle .description {
-    @media (max-width: 578px) {
+    @media (max-width: 576px) {
        margin-left: 0;
     }
   }
