--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -197,6 +197,7 @@ button:focus {
   @import "new_tariff/new_tariff";
   @import "spa-sections/tariff";
   @import "report/report";
+  @import "treatment/treatment";
   @import "description_templates/description_templates";
   @media (max-width: 991px) {
     margin-top: 3.5rem;
