--- a/css/app.css
+++ b/css/app.css
@@ -10370,17 +10370,6 @@ label {
   text-align: center;
 }
 
-.responsive-table {
-  -webkit-overflow-scrolling: touch;
-}
-@media (max-width: 1199px) {
-  .responsive-table {
-    display: block;
-    width: 95vw;
-    overflow-x: auto;
-  }
-}
-
 .navbar-collapse {
   transition: all 1s ease-in-out;
   -webkit-transform: translate3d(0, 0, 0);
@@ -11710,6 +11699,237 @@ button:focus {
     font-size: 2.2rem;
   }
 }
+.l_site-main .l_treatment-title {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+  font-family: Rubik, sans-serif;
+}
+@media (max-width: 1600px) {
+  .l_site-main .l_treatment-title {
+    font-size: 2.8rem;
+  }
+}
+@media (max-width: 800px) {
+  .l_site-main .l_treatment-title {
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_treatment-title {
+    font-size: 2.2rem;
+  }
+}
+.treatment .l_site-main .l_treatment-container .responsive-table {
+  -webkit-overflow-scrolling: touch;
+}
+@media (max-width: 1199px) {
+  .treatment .l_site-main .l_treatment-container .responsive-table {
+    display: block;
+    overflow-x: auto;
+  }
+}
+.treatment .l_site-main .l_treatment-container .l_treatment-nav {
+  margin-bottom: 2.1875rem;
+}
+.treatment .l_site-main .l_treatment-container .l_treatment-nav .nav-link {
+  position: relative;
+  display: inline-flex;
+  font-size: 1.5rem;
+  color: #999999;
+  font-weight: 500;
+}
+@media (max-width: 576px) {
+  .treatment .l_site-main .l_treatment-container .l_treatment-nav .nav-link {
+    line-height: inherit;
+    text-align: center;
+  }
+}
+.treatment .l_site-main .l_treatment-container .l_treatment-nav .nav-link.active {
+  color: #2c2d2e;
+}
+.treatment .l_site-main .l_treatment-container .l_treatment-nav .nav-link.active::after {
+  content: "";
+  position: absolute;
+  left: 1rem;
+  bottom: -5px;
+  height: 6px;
+  width: 100%;
+  border-bottom: 6px solid #FF398B;
+}
+@media (max-width: 576px) {
+  .treatment .l_site-main .l_treatment-container .l_treatment-nav .nav-link.active::after {
+    left: 0;
+    width: 100%;
+  }
+}
+.treatment .l_site-main .l_treatment-container .l_treatment-nav .custom-link {
+  position: relative;
+  display: inline-flex;
+  font-size: 1.5rem;
+  color: #6244c9;
+  text-decoration: underline;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+}
+.treatment .l_site-main .l_treatment-message_card {
+  display: flex;
+  border: 1px solid #F3EDFB;
+  border-radius: 10px;
+  margin-bottom: 1.375rem;
+  font-family: Rubik, sans-serif;
+  font-size: 1.125rem;
+  color: #1f2022;
+}
+@media (max-width: 1023px) {
+  .treatment .l_site-main .l_treatment-message_card {
+    flex-direction: column;
+  }
+}
+.treatment .l_site-main .l_treatment-message_card:nth-of-type(even) {
+  background-color: #F9F9F9;
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_info {
+  padding: 1.5rem;
+}
+@media (min-width: 1024px) {
+  .treatment .l_site-main .l_treatment-message_card .l_treatment-message_info {
+    max-width: 350px;
+    min-width: 350px;
+  }
+}
+@media (max-width: 1023px) {
+  .treatment .l_site-main .l_treatment-message_card .l_treatment-message_info {
+    border-bottom: 1px solid #F3EDFB;
+    text-align: center;
+  }
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_info .message_info-list {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 1.5rem;
+}
+@media (max-width: 1023px) {
+  .treatment .l_site-main .l_treatment-message_card .l_treatment-message_info .message_info-list {
+    padding-left: 0;
+  }
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_info .message_info-list .support {
+  color: #FF3C88;
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_info .message_info-list .date {
+  word-spacing: 1rem;
+  color: #999999;
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_info .message_info-list .date_passed {
+  color: #999999;
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_info .message_info-list li {
+  padding: 0.1rem 0;
+}
+.treatment .l_site-main .l_treatment-message_card .l_treatment-message_body {
+  padding: 1.5rem 3rem;
+  border-left: 1px solid #F3EDFB;
+}
+@media (max-width: 1023px) {
+  .treatment .l_site-main .l_treatment-message_card .l_treatment-message_body {
+    border-left: none;
+    padding: 1.5rem;
+    text-align: justify;
+  }
+}
+.treatment .l_site-main .l_treatment-closed {
+  font-family: Rubik, sans-serif;
+  border: 1px solid #F3EDFB;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+.treatment .l_site-main .l_treatment-closed a {
+  color: #6244c9;
+  text-decoration: underline;
+}
+.treatment .l_site-main .l_treatment-closed a:hover {
+  color: #4f34ab;
+}
+.treatment .l_site-main .l_treatment-closed a:focus {
+  color: #3b287e;
+}
+.treatment .l_site-main .l_treatment-closed p {
+  margin-bottom: 0;
+}
+.treatment .l_site-main .l_treatment-navigation {
+  margin-bottom: 2rem;
+}
+@media (max-width: 576px) {
+  .treatment .l_site-main .l_treatment-navigation {
+    text-align: center;
+  }
+}
+.treatment .l_site-main .l_treatment-navigation .nav-back {
+  position: relative;
+  padding: 0.63rem 1.7rem 0.63rem 2.5rem;
+}
+.treatment .l_site-main .l_treatment-navigation .nav-back:after {
+  content: "";
+  position: absolute;
+  top: 1.5rem;
+  left: 1.125rem;
+  width: 0.6rem;
+  height: 1px;
+  background-color: white;
+  -webkit-transform: rotate(42deg);
+          transform: rotate(42deg);
+}
+.treatment .l_site-main .l_treatment-navigation .nav-back:before {
+  content: "";
+  position: absolute;
+  top: 1.11rem;
+  left: 1.125rem;
+  width: 0.6rem;
+  height: 1px;
+  background-color: white;
+  -webkit-transform: rotate(-42deg);
+          transform: rotate(-42deg);
+}
+.treatment .l_site-main .table thead th, .treatment .l_site-main .table-bordered th, .treatment .l_site-main .table-bordered thead td {
+  min-width: 275px;
+}
+.treatment .l_site-main .table thead {
+  background-color: transparent;
+}
+.treatment .l_site-main .table th {
+  color: #1f2022;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: Rubik, sans-serif;
+}
+.treatment .l_site-main .table tbody td {
+  color: #1f2022;
+  font-size: 1.125rem;
+  font-family: Rubik, sans-serif;
+  font-weight: 400;
+  padding: 2.0625rem 0.75rem;
+}
+.treatment .l_site-main .table td .date {
+  display: block;
+}
+.l_site-main .l_treatment-body input, .l_site-main .l_treatment-body textarea, .l_site-main .l_treatment-body label {
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  font-size: 1.125rem;
+  color: #2c2d2e;
+}
+@media (max-width: 576px) {
+  .l_site-main .l_treatment-body input, .l_site-main .l_treatment-body label {
+    text-align: center;
+  }
+}
+@media (max-width: 576px) {
+  .l_site-main .l_treatment-body button[type=submit] {
+    width: 100%;
+  }
+}
 .l_site-main .l_desc-templates-title {
   margin-bottom: 3.125rem;
 }
@@ -11721,6 +11941,16 @@ button:focus {
 @media (max-width: 767px) {
   .l_site-main .l_desc-templates-container {
     text-align: center;
+  }
+}
+.l_site-main .l_desc-templates-container .responsive-table {
+  -webkit-overflow-scrolling: touch;
+}
+@media (max-width: 1199px) {
+  .l_site-main .l_desc-templates-container .responsive-table {
+    display: block;
+    width: 95vw;
+    overflow-x: auto;
   }
 }
 .l_site-main .l_desc-templates-container .add_desc-templates {
