--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,6 +29,8 @@ $aside_bgc:  #FFFDFD !default;
 $aside_tc: $a !default;
 
 $table_c :  $a;
+$trmt_c: $main_black;
+$trmt_sup : $a_inline;
 
 $field2_brc: $aside_bc !default;
 $field2_lc: $a !default;
